@@ -46,7 +46,7 @@ ccss_stylesheet_t
 ccss_stylesheet_precedence_t
 ccss_stylesheet_new_from_buffer
 ccss_stylesheet_new_from_file
-ccss_stylesheet_load_from_file
+ccss_stylesheet_add_from_file
 ccss_stylesheet_foreach
 ccss_stylesheet_free
 ccss_stylesheet_query_type
